<resources>
    <string name="app_name">Homework Three</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="time_picker">Time picker</string>
    <string name="date_picker">Date picker</string>
    <string name="save_alarm">Save alarm</string>
    <string name="separator">,</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="users">Users</string>
    <string name="to_dos">To dos</string>
</resources>
