<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <Button
        android:id="@+id/time_picker"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/time_picker"
        android:background="@drawable/button_selector"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date_picker"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/date_picker"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/date_picker"
        android:background="@drawable/button_selector"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/time_picker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/selected_values" />

    <LinearLayout
        android:id="@+id/selected_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_picker"
        app:layout_constraintBottom_toTopOf="@id/save_alarm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <TextView
            android:id="@+id/picked_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/picked_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/save_alarm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save_alarm"
        android:background="@drawable/button_selector"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/selected_values"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>